[zk_dapp_example] create contracts

--- a/zk_dapp_example/.gitignore
+++ b/zk_dapp_example/.gitignore
@@ -35,3 +35,18 @@ yarn-error.log*
 next-env.d.ts
 
 circuits/build
+
+*.env
+
+contracts/cache
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
