--- a/zk_dapp_example/package.json
+++ b/zk_dapp_example/package.json
@@ -21,7 +21,6 @@
     "circomlib": "^2.0.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "ethers": "^5",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -30,5 +29,14 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "wagmi": "^1.3.9"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@types/sinon-chai": "^3.2.9",
+    "dotenv": "^16.3.1",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.17.0"
   }
 }
