--- a/zk_dapp_example/package.json
+++ b/zk_dapp_example/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
     "@mantine/notifications": "^6.0.17",
+    "@truffle/hdwallet-provider": "^2.1.13",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
